--- a/config.yml
+++ b/config.yml
@@ -113,23 +113,23 @@ params:
 menu:
   main:
     - identifier: Posts
-      name: posts
+      name: Posts
       url: /posts/
       weight: 5
     - identifier: Archive
-      name: archives
+      name: Archive
       url: /archives/
       weight: 10
     - identifier: Categories
-      name: categories
+      name: Categories
       url: /categories/
       weight: 10
     - identifier: Tags
-      name: tags
+      name: Tags
       url: /tags/
       weight: 20
     - identifier: Search
-      name: search
+      name: Search
       url: /search/
       weight: 25
     # - identifier: example
